updated product-list-vanillaJs directory

--- a/product-list-vanillaJs/index.html
+++ b/product-list-vanillaJs/index.html
@@ -255,10 +255,10 @@
               <figcaption>Pie</figcaption>
             </figure>
 
-            <p class="dessert-title" data-dessert-title="Pistachio Baklava">
+            <p class="dessert-title" data-dessert-title="Lemon Meringue Pie">
               Lemon Meringue Pie
             </p>
-            <p class="dessert-price" data-dessert-price="4">$5.00</p>
+            <p class="dessert-price" data-dessert-price="5">$5.00</p>
           </article>
 
           <article data-dessert class="dessert">
@@ -396,19 +396,7 @@
 
         <div data-cart-orders class="cart-orders d-none">
           <div data-cart-items class="cart-items">
-            <div class="cart-item">
-              <p>
-                <span class="cart-item-title"> Classic Tiramisu </span>
-                <span class="cart-item-flex">
-                  <span class="cart-item-quantity">1x</span>
-                  <span class="cart-item-price">@$5.50</span>
-                  <span class="cart-item-sum">$5.50</span>
-                </span>
-              </p>
-              <button type="button">
-                <img src="./assets/images/icon-remove-item.svg" alt="" />
-              </button>
-            </div>
+            
           </div>
 
           <div data-cart-footer class="cart-footer">
@@ -435,19 +423,7 @@
       <p class="dialog-text">We hope you enjoy your food!</p>
 
       <div class="receipt" data-receipt>
-        <div class="receipt-item">
-          <div class="receipt-block">
-            <img src="./assets/images/image-tiramisu-mobile.jpg" alt="tiramisu" />
-            <p class="receipt-flex">
-              <span class="receipt-title">Classic Tiramisu</span>
-              <span class="receipt-flex2">
-                <span class="receipt-quantity">1x</span>
-                <span class="receipt-price">@$5.50</span>
-              </span>
-            </p>
-          </div>
-          <p class="receipt-sum">$5.50</p>
-        </div>
+        
       </div>
       <p class="dialog-order-total">
         <span>Order Total</span>
