--- a/product-list-vanillaJs/index.html
+++ b/product-list-vanillaJs/index.html
@@ -55,7 +55,7 @@
               <figcaption>Waffle</figcaption>
             </figure>
 
-            <p class="dessert-title" data-dessert-title="Waffle">
+            <p class="dessert-title" data-dessert-title="Waffle with Berries">
               Waffle with Berries
             </p>
             <p class="dessert-price" data-dessert-price="6.5">$6.50</p>
